# arithmetics

./: .gitignore  Cargo.toml  README.md  config.toml  run_complete_analysis.sh
benches/: aggregate.rs  arithmetic_comparison.rs  complex_operations.rs  convert.rs  cross_platform_compatibility.rs  error_analysis_benchmarks.rs  fixed_point.rs  half_precision.rs  integration_tests.rs  multithreaded_operations.rs  ops.rs  profiling_benchmarks.rs  real_world.rs  real_world_applications.rs  simd_operations.rs
src/: cli.rs  config.rs  error_analysis.rs  export.rs  gpu.rs  lib.rs  main.rs  platform.rs  profiler.rs  profiling.rs  regression.rs  validation.rs  visualization.rs
src/precision/: memory.rs  mod.rs
tests/: integration_tests.rs  precision.rs  unit_tests.rs
