[package]
name = "arithmetics"
version = "0.1.0"
edition = "2021"
authors = ["raventid"]
description = "Comprehensive comparison and benchmarking of Rust arithmetic libraries"
license = "MIT"

[dependencies]
rust_decimal = "1.42"
bigdecimal = "0.4.10"
fixed = "1.31"
half = "2.7"
fastnum = "0.7"

[dev-dependencies]
criterion = "0.8"