[package]
name = "arithmetics"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
authors = ["raventid"]
description = "Comprehensive comparison and benchmarking of Rust arithmetic libraries"
license = "MIT"

[dependencies]
rust_decimal = "1.42"
bigdecimal = "0.4.10"
fixed = "1.31"
half = "2.7"
fastnum = "0.7"

[[bench]]
name = "ops"
harness = false

[[bench]]
name = "aggregate"
harness = false

[[bench]]
name = "convert"
harness = false

[dev-dependencies]
criterion = "0.8"

[profile.bench]
lto = true
codegen-units = 1
