[package]
name = "arithmetics"
version = "0.2.0"
edition = "2021"
rust-version = "1.86"
authors = ["raventid"]
description = "Microbenchmarks comparing Rust numeric types: floats, decimals, fixed-point, half-precision"
license = "MIT"

[dependencies]
rust_decimal = "1.42"
bigdecimal = "0.4.10"
fixed = "1.31"
half = "2.7"
fastnum = "0.7"

[[bench]]
name = "ops"
harness = false

[[bench]]
name = "aggregate"
harness = false

[[bench]]
name = "convert"
harness = false

[[bench]]
name = "real_world"
harness = false

[dev-dependencies]
criterion = "0.8"

[profile.bench]
lto = true
codegen-units = 1
